fix build config for argos

--- a/argos-simulation/kilobots/CMakeLists.txt
+++ b/argos-simulation/kilobots/CMakeLists.txt
@@ -1,7 +1,11 @@
+cmake_minimum_required(VERSION 2.8.12)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 set(kilobot_rw_SOURCES 
   kilobot_rw_ctrl.cpp
   kilobot_rw_lf.cpp
-)
+  )
+find_package(Lua52 REQUIRED)
 
 add_library(kilobot_rw SHARED ${kilobot_rw_SOURCES})
 target_link_libraries(kilobot_rw
